--- a/Style2.css
+++ b/Style2.css
@@ -141,3 +141,27 @@ body {
   border-color: #000000;
   color: #000000;
 }
+
+#log {
+  position: fixed;
+  text-decoration: none;
+  font-size: 12px;
+  text-align: center;
+  
+  color: #adadad;
+  box-sizing: content-box;
+  width: 50px;
+  height: auto;
+  padding: 10px 0px 8px 0px;
+  border-radius: 28px;
+  border: solid 1px #adadad;
+  
+  bottom: 4px;
+  right: 60px;
+  
+}
+
+#log:hover {
+  color: #0A0A0A;
+  border-color: #0A0A0A;
+}
