--- a/Style.css
+++ b/Style.css
@@ -27,7 +27,7 @@ body {
   text-align: center;
   font-size: 25px;
   color: #575757;
-  background-color: #0A0A0A;
+  background-color: transparent;
 
 
   transition: border-color 0.5s ease-out;
@@ -69,7 +69,7 @@ body {
   height: auto;
   padding: 12px 20px 10px 20px;
   border-radius: 28px;
-  border: solid 2px #0A0A0A;
+  border: solid 2px transparent;
 }
 
 ::selection {
@@ -92,7 +92,7 @@ body {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  background-color: #000;
+  background-color: transparent;
   color: #575757;
 }
 
